Add name input functionality, button layout

--- a/package.json
+++ b/package.json
@@ -19,8 +19,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "react-router-dom": "^6.3.0"
-  }
+  "description": ""
 }
