--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
+
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
@@ -25,5 +26,8 @@
     "jest": "^27.5.1",
     "nodemon": "^2.0.15",
     "ts-jest": "^27.1.4"
+  },
+  "overrides": {
+    "semver": "~7.5.2"
   }
 }
