--- a/client/package.json
+++ b/client/package.json
@@ -45,5 +45,8 @@
   "proxy": "http://localhost:3001",
   "devDependencies": {
     "react-test-renderer": "^19.0.0"
+  },
+  "overrides": {
+    "typescript": "^5.7.3"
   }
 }
