Add debugging tool Node.js 'util', and console.log for every time appState changes.

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "util": "^0.12.5"
+  }
 }
